@@ -799,4 +799,11 @@ public class HtmlParserTest {
         assertEquals(1, doc.select("table input").size());
         assertEquals(2, doc.select("input").size());
     }
+
+    @Test public void convertsImageToImg() {
+        // image to img, unless in a svg. old html cruft.
+        String h = "<body><image><svg><image /></svg></body>";
+        Document doc = Jsoup.parse(h);
+        assertEquals("<img />\n<svg>\n <image />\n</svg>", doc.body().html());
+    }
 }
