@@ -4,6 +4,10 @@ jsoup changelog
  * Improved the performance of Element.text() by 2.2x
 
  * If pretty-print is disabled, don't trim outer whitespace in Element.html()
+   <https://github.com/jhy/jsoup/issues/368>
+
+ * Fixed an issue where <svg><img/></svg> was parsed as <svg><image/></svg>
+   <https://github.com/jhy/jsoup/issues/364>
 
 *** Release 1.7.3 [2013-Nov-10]
  * Introduced FormElement, providing easy access to form controls and their data, and the ability to submit forms
